--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -12,14 +12,13 @@
 			<subHeader>
 				<Toolbar>
 					<SearchField id="searchField" width="50%" liveChange="onSearch"/>
-
-					<!-- <SearchField id="searchField" width="50%" liveChange="onSearch" /> -->
-					<Select id="searchDropdown" change="onSearchOptionChange">
-						<core:Item text="Name" key="name" type="Navigation" />
-						<core:Item text="Category" key="category" type="Navigation" />
-						<core:Item text="Payment Status" key="payment_status" type="Navigation" />
-					</Select>
 					<ToolbarSpacer />
+					<Button
+    					text="Refresh"
+    					type="Emphasized"
+    					icon="sap-icon://synchronize"
+    					press=".onRefresh" 
+					/>
 					<Button
     					text="Add"
     					type="Emphasized"
@@ -43,7 +42,7 @@
 					items="{path: '/customer_data'}"
 					>
 					<items>
-						<!-- <StandardListItem title="{name}" /> -->
+						
 						<CustomListItem class="sapUiSmallMarginTop"> 
 							<l:Grid defaultSpan="L12 M12 S12">
 								<l:content>
@@ -55,7 +54,7 @@
 									</VBox>
 
 									<VBox class="sapUiSmallMarginTop"> 
-										<!-- <Label text="{payment_status}" /> -->
+										
 										<ObjectStatus
 											state="{
 														path: 'payment_status',
@@ -73,10 +72,7 @@
 									
 
 
-									<VBox alignItems="End" class="sapUiSmallMarginTop"> <!-- Apply custom-vbox-style class -->
-										<!-- <Text icon="sap-icon://favorite" /> -->
-										<!-- <Button type="Transparent" icon="sap-icon://favorite"
-										/> -->
+									<VBox alignItems="End" class="sapUiLargeMarginEnd"> 
 										<core:Icon src="sap-icon://favorite"
 											color="{
 														path: 'category',
@@ -126,13 +122,7 @@
 					singleContainerFullSize="false" />
 			</f:layout>
 				<f:FormContainer ariaLabelledBy="TitleDetail2">
-					<!-- <f:toolbar>
-						<Toolbar>
-							<Title id="Title2" text="Office"/>
-							<ToolbarSpacer />
-							<Button icon="sap-icon://settings"/>
-						</Toolbar>
-					</f:toolbar> -->
+					
 					<f:formElements>
 						<f:FormElement label="Name">
 							<f:fields>
